<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tn.esprit</groupId>
    <artifactId>workshopJDBC3A15</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
<<<<<<< HEAD
        <!-- Dépendances JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.2</version>
=======
        <!-- JavaFX 17 (version stable) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.2</version>
>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
<<<<<<< HEAD
            <version>21.0.2</version>
        </dependency>

        <!-- MySQL Connector -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
=======
            <version>17.0.2</version>
        </dependency>

        <!-- MySQL -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
            <version>8.0.33</version>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-core</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId> <!-- Ajoutez "5" -->
            <version>12.3.1</version>
        </dependency>
    </dependencies>


<<<<<<< HEAD

    <build>
        <plugins>
            <!-- Plugin JavaFX -->
=======
    <build>
        <plugins>
>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>tn.esprit.test.MainFx</mainClass>
<<<<<<< HEAD
=======
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
                    </options>
>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
                </configuration>
            </plugin>
        </plugins>
    </build>
<<<<<<< HEAD
</project>
=======
</project>
>>>>>>> origin/AzizBenAmmar/GestionInterventions_Reclamations
